--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,138 @@
-###### Peter's Starter Template for a Flask Web App ######
-###### Requirements without Version Specifiers ######
-alembic==0.9.9
-blinker==1.4
-chardet==3.0.4
-click==6.7
-Flask==1.0.2
-Flask-Dance==0.14.0
-Flask-DebugToolbar==0.10.1
-Flask-Login==0.4.1
-Flask-Migrate==2.1.1
-Flask-OAuth==0.12
-Flask-OAuthlib==0.9.4
-Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
-httplib2==0.11.3
-idna==2.6
-itsdangerous==0.24
-Jinja2==2.10
-lazy==1.3
-Mako==1.0.7
-MarkupSafe==1.1.1
-oauth2==1.9.0.post1
-oauthlib==2.0.7
-python-dateutil==2.7.2
-python-editor==1.0.3
-requests==2.18.4
-requests-oauthlib==0.8.0
-six==1.11.0
-SQLAlchemy==1.2.6
-SQLAlchemy-Utils==0.33.2
-urllib3==1.22
-URLObject==2.4.3
-Werkzeug==0.14.1
-wincertstore==0.2
-WTForms==2.1
+absl-py==0.13.0
+adal==1.2.7
+attrs==21.2.0
+azure==4.0.0
+azure-applicationinsights==0.1.0
+azure-batch==4.1.3
+azure-cognitiveservices-vision-computervision==0.9.0
+azure-cognitiveservices-vision-customvision==3.1.0
+azure-common==1.1.27
+azure-cosmosdb-nspkg==2.0.2
+azure-cosmosdb-table==1.0.6
+azure-datalake-store==0.0.52
+azure-eventgrid==1.3.0
+azure-graphrbac==0.40.0
+azure-keyvault==1.1.0
+azure-loganalytics==0.1.0
+azure-mgmt==4.0.0
+azure-mgmt-advisor==1.0.1
+azure-mgmt-applicationinsights==0.1.1
+azure-mgmt-authorization==0.50.0
+azure-mgmt-batch==5.0.1
+azure-mgmt-batchai==2.0.0
+azure-mgmt-billing==0.2.0
+azure-mgmt-cdn==3.1.0
+azure-mgmt-cognitiveservices==3.0.0
+azure-mgmt-commerce==1.0.1
+azure-mgmt-compute==4.6.2
+azure-mgmt-consumption==2.0.0
+azure-mgmt-containerinstance==1.5.0
+azure-mgmt-containerregistry==2.8.0
+azure-mgmt-containerservice==4.4.0
+azure-mgmt-cosmosdb==0.4.1
+azure-mgmt-datafactory==0.6.0
+azure-mgmt-datalake-analytics==0.6.0
+azure-mgmt-datalake-nspkg==3.0.1
+azure-mgmt-datalake-store==0.5.0
+azure-mgmt-datamigration==1.0.0
+azure-mgmt-devspaces==0.1.0
+azure-mgmt-devtestlabs==2.2.0
+azure-mgmt-dns==2.1.0
+azure-mgmt-eventgrid==1.0.0
+azure-mgmt-eventhub==2.6.0
+azure-mgmt-hanaonazure==0.1.1
+azure-mgmt-iotcentral==0.1.0
+azure-mgmt-iothub==0.5.0
+azure-mgmt-iothubprovisioningservices==0.2.0
+azure-mgmt-keyvault==1.1.0
+azure-mgmt-loganalytics==0.2.0
+azure-mgmt-logic==3.0.0
+azure-mgmt-machinelearningcompute==0.4.1
+azure-mgmt-managementgroups==0.1.0
+azure-mgmt-managementpartner==0.1.1
+azure-mgmt-maps==0.1.0
+azure-mgmt-marketplaceordering==0.1.0
+azure-mgmt-media==1.0.1
+azure-mgmt-monitor==0.5.2
+azure-mgmt-msi==0.2.0
+azure-mgmt-network==2.7.0
+azure-mgmt-notificationhubs==2.1.0
+azure-mgmt-nspkg==3.0.2
+azure-mgmt-policyinsights==0.1.0
+azure-mgmt-powerbiembedded==2.0.0
+azure-mgmt-rdbms==1.9.0
+azure-mgmt-recoveryservices==0.3.0
+azure-mgmt-recoveryservicesbackup==0.3.0
+azure-mgmt-redis==5.0.0
+azure-mgmt-relay==0.1.0
+azure-mgmt-reservations==0.2.1
+azure-mgmt-resource==2.2.0
+azure-mgmt-scheduler==2.0.0
+azure-mgmt-search==2.1.0
+azure-mgmt-servicebus==0.5.3
+azure-mgmt-servicefabric==0.2.0
+azure-mgmt-signalr==0.1.1
+azure-mgmt-sql==0.9.1
+azure-mgmt-storage==2.0.0
+azure-mgmt-subscription==0.2.0
+azure-mgmt-trafficmanager==0.50.0
+azure-mgmt-web==0.35.0
+azure-nspkg==3.0.2
+azure-servicebus==0.21.1
+azure-servicefabric==6.3.0.0
+azure-servicemanagement-legacy==0.20.7
+azure-storage-blob==1.5.0
+azure-storage-common==1.4.2
+azure-storage-file==1.4.0
+azure-storage-queue==1.4.0
+bcrypt==3.2.0
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.4
+click==8.0.1
+cryptography==3.4.7
+cycler==0.10.0
+dnspython==2.1.0
+email-validator==1.1.3
+Flask==2.0.1
+Flask-Bcrypt==0.7.1
+Flask-Login==0.5.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.15.1
+greenlet==1.1.1
+gunicorn==20.1.0
+idna==3.2
+isodate==0.6.0
+itsdangerous==2.0.1
+Jinja2==3.0.1
+kiwisolver==1.3.1
+MarkupSafe==2.0.1
+matplotlib==3.4.2
+mediapipe==0.8.6.2
+msrest==0.6.21
+msrestazure==0.6.4
+mysql-connector==2.2.9
+mysql-connector-python==8.0.26
+mysql-connector-python-rf==2.2.2
+numpy==1.21.1
+oauthlib==3.1.1
+opencv-contrib-python==4.5.3.56
+opencv-python==4.5.3.56
+pandas==1.3.1
+Pillow==8.3.1
+protobuf==3.17.3
+pycparser==2.20
+PyJWT==2.1.0
+PyMySQL==1.0.2
+pyparsing==2.4.7
+python-dateutil==2.8.2
+pytz==2021.1
+requests==2.26.0
+requests-oauthlib==1.3.0
+scipy==1.7.1
+seaborn==0.11.1
+six==1.16.0
+SQLAlchemy==1.4.22
+urllib3==1.26.6
+Werkzeug==2.0.1
+WTForms==2.3.3
