--- a/requirements.txt
+++ b/requirements.txt
@@ -67,6 +67,7 @@ pytz==2021.1
 requests==2.26.0
 requests-oauthlib==1.3.0
 scipy==1.7.1
+seaborn==0.11.1
 six==1.16.0
 SQLAlchemy==1.4.22
 urllib3==1.26.6
